# amFOSS-Tasks

./: README.md
Introspection/: README.md
Task-0/: README.md
Task-1/: README.md
Task-10/: README.md
Task-10/pset0/: Flappy Bird.sb3
Task-10/pset1/Cash/: cash.c
Task-10/pset1/Hello/: hello.c
Task-10/pset1/Mario/: version1.c
Task-2/: README.md  SOLUTION.md
Task-4/: README.md  bot.py  movie_data.csv
Task-5/: README.md
Task-5/Client/: Program.cs
Task-5/Server/: Program.cs  file.json
Task-6/: README.md
Task-6/flame/: pubspec.yaml
Task-6/flame/lib/: main.dart
Task-7/: README.md  index.html  main.go  main.wasm
Task-8/: README.md  index.html  index.js  styles.css
Task-9/: Cargo.toml  README.md
Task-9/src/: Crypto.csv  main.rs  main1.rs
