[package]
name = "Web-scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4",features = ["blocking"]} 
scraper = "0.12.0"
csv = "1.1.6"
serde = {version = "1.0.130", features = ["derive"]}